# render_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
samples/: CMakeLists.txt
samples/quaternions/: CMakeLists.txt  main.cpp
samples/raytracer/: CMakeLists.txt  camera.cpp  camera.hpp  dielectric.cpp  dielectric.hpp  hit_detector.cpp  hit_detector.hpp  hit_detectors_list.cpp  hit_detectors_list.hpp  hit_record.cpp  hit_record.hpp  lambertian.cpp  lambertian.hpp  main.cpp  material.cpp  material.hpp  metal.cpp  metal.hpp  sphere.cpp  sphere.hpp
samples/rubiks_cube/: CMakeLists.txt  cube.cpp  cube.hpp  main.cpp  quad.cpp  quad.hpp  ray.cpp  ray.hpp  rotation_manager.cpp  rotation_manager.hpp  rubiks_cube.cpp  rubiks_cube.hpp
src/: CMakeLists.txt  camera.cpp  camera.hpp  cube.cpp  cube.hpp  cube_row.cpp  cube_row.hpp  quad.cpp  rotation_manager.cpp  rotation_manager.hpp  rubicks_cube.cpp  rubicks_cube.hpp  rubiks_cube.cpp  rubiks_cube.hpp
src/math/: matrix.cpp  matrix.hpp  matrix_operations.cpp  matrix_operations.hpp  quaternion.cpp  quaternion.hpp  ray.hpp  vector.cpp  vector.hpp
src/memory/: pool.hpp  pool_factory.hpp
src/misc/: debug.hpp  images_loader.cpp  images_loader.hpp  misc.cpp  misc.hpp  opengl.cpp  opengl.hpp  size.hpp  types_traits.hpp
src/renderer/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp
src/scene/: mesh_instance.cpp  mesh_instance.hpp
src/shapes/: curve.cpp  curve.hpp  cylinder.cpp  cylinder.hpp  procedural.cpp  procedural.hpp  quadratic.cpp  quadratic.hpp  shape.hpp  sphere.cpp  sphere.hpp
third/: CMakeLists.txt
(+67 files in other folders)
